--- a/requirements-stdborg.txt
+++ b/requirements-stdborg.txt
@@ -6,8 +6,10 @@ cfscrape
 cryptg
 emoji
 googletrans
+google-api-python-client
+google_auth_oauthlib
+gsearch>=1.6.0
 google_images_download
-gsearch
 gtts
 hachoir
 Pillow
